# mit-bih

./: .gitignore  README.md  best_fedavg_model.pth  justfile  main_old.py  pefcl_raw_results.json  pyproject.toml  research_baseline_v1.py
notebooks/01-mit-bih-arrhythmia/: 01-exploratory-data-analysis.ipynb  02-data-preprocessing-and-segmentation.ipynb  03-local-model-training.ipynb  04-federated-learning-simulation.ipynb  05-parameter-efficient-federated-continual-learning.ipynb
scripts/: download_datasets.py
src/fl_core/: __init__.py  continual.py  fedavg.py
src/mit_bih/: __init__.py  __main__.py  data.py  models.py  visualization.py
src/mit_bih/cl/: __init__.py  ewc.py  trainer.py
src/mit_bih/data/: __init__.py  download.py  preprocess.py
src/mit_bih/fl/: __init__.py  client.py  server.py  simulation.py
src/mit_bih/utils/: __init__.py  visualization.py
tests/: conftest.py  test_data.py  test_fl.py  test_models.py
